# github-actions-for-data-scientists

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  requirements.docs.txt  sitemap.xml
.github/workflows/: build-resume.yml  docs-publish.yaml  download-ufo-data.yml  personal-docker-image.yml  simple-actions.yaml
automate-latex-resume/: mmayer.tex
changelog/: index.html
data_scriping/: pyproject.toml
data_scriping/tests/integration/: conftest.py  test_utils.py
data_scriping/tests/integration/data/: raw_html.binary  raw_html_ndxe.binary
data_scriping/tests/unit/: test_utils.py
data_scriping/ufo_data/: cli.py  utils.py
dataset/: nuforc_ufo_records.csv
demo/: index.html
demo/build-latex-resume/: index.html
docs/: CNAME  changelog.md  index.md
docs/demo/: build-latex-resume.md
docs/notebooks/: some_charts.py
notebooks/some_charts/: index.html
personalized-docker-image/: Dockerfile  README.md  environment.yml  pyproject.toml
search/: search_index.json
