[tool.poetry]
name = "data-scraping-with-github-actions"
version = "0.0.1"
description = "Scraping UFO records using github actions"
authors = ["LM <hi@leima.is>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.5.2"
pip = "22.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pycln]
all = true

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]
