[tool.poetry]
name = "ufo_data"
version = "0.0.1"
description = "Scraping UFO records using github actions"
authors = ["LM <hi@leima.is>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.28.1"
beautifulsoup4 = "4.11.1"
loguru = "0.6.0"
click = "8.1.3"
pandas = "1.5.2"
lxml = "4.9.2"
pip = "22.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
requests-mock = "1.10.0"

[tool.poetry.scripts]
ufo = "ufo_data.cli:download"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pycln]
all = true

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]
