[tool.poetry]
name = "personalized-docker-image"
version = "0.1.0"
description = ""
authors = ["LM <hi@leima.is>"]

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^1.7.2"
jupyter = "1.0.0"
matplotlib = "3.6.2"
numpy = "1.24.1"
pandas = "1.5.2"
pip = "22.3.1"
pyarrow = "10.0.1"
s3fs = "0.4.0"
seaborn = "0.12.2"
torch = "^1.13"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pycln]
all = true

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]